--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -21,7 +21,7 @@
             </p>
 
             <div *ngIf="notifications.viewDebtors" id="debtors">
-                <p *ngFor="let deb of notifications.debtors" (click)="debtorPay(deb.id)"> {{ deb.name }}</p>
+                <p *ngFor="let deb of notifications.debtors" (click)="debtorPay(deb.id)" [routerLink]="['/receipt/create']"> {{ deb.name }}</p>
             </div>
             <!-- <p>Hay #{{ notifications.debtorsInscription }} alumnos con inscripciones pendientes de este mes.</p> -->
         </div>
@@ -56,7 +56,7 @@
                 </tr>
                 <!-- <th colspan="3">Opciones</th> -->
             </thead>
-            <tbody>
+            <tbody *ngIf="storage.getUserType() >= 6">
                 <tr *ngFor="let re of receipts" [routerLink]="['/receipt/edit', re.id]" (click)="updateStartObservable()">
                     <td class="left">{{ re.user_name }}</td>
                     <td>{{ re.created_at }}</td>
@@ -69,14 +69,31 @@
 
                 </tr>
             </tbody>
+
+            <tbody *ngIf="storage.getUserType() == 3">
+                <tr *ngFor="let re of receipts">
+                    <td class="left">{{ re.user_name }}</td>
+                    <td>{{ re.created_at }}</td>
+                    <td>$ {{ re.amount }}</td>
+                    <td *ngIf="re.type == 1">Mensualidad</td>
+                    <td *ngIf="re.type == 2">Inscripcion</td>
+                    <td *ngIf="re.type == 3">Día</td>
+                    <td *ngIf="re.type == 4">Uniforme</td>
+                    <td *ngIf="re.type == 5">Evento</td>
+
+                </tr>
+
+            </tbody>
         </table>
+
         <mat-paginator (page)="pageAction($event)" [length]="search.total" [pageSize]="search.items" [pageSizeOptions]="[5, 10, 25, 50, 100]">
         </mat-paginator>
+
     </div>
 
 </div>
 
-<a (click)="redirectCreateUser()" [routerLink]="['receipt/create']">
+<a (click)="redirectCreateUser()" [routerLink]="['/receipt/create']">
     <div class="botonFloat">
         <a class="botonA" matTooltip="Crear recibo"><i class="material-icons">add</i></a>
     </div>
