--- a/src/app/user/edit-user/edit-user.component.html
+++ b/src/app/user/edit-user/edit-user.component.html
@@ -35,7 +35,7 @@
 
                 <div class="formData">
                     <label>Tipo de usuario:</label><br>
-                    <select [(ngModel)]="user.user_type_id" name="user_type_id" *ngIf="credential == '6'">
+                    <select [(ngModel)]="user.user_type_id" name="user_type_id" *ngIf="credential == '6'" disabled>
                         <option value="1">Alumno</option> 
                         <option value="2">Empleado</option>
                         <option value="3">Cajero</option>
@@ -45,7 +45,12 @@
                     </select>
                     <select [(ngModel)]="user.user_type_id" name="user_type_id" *ngIf="credential == '3'" disabled>
                         <option value="1">Alumno</option> 
-                       
+                        <option value="1">Alumno</option> 
+                        <option value="2">Empleado</option>
+                        <option value="3">Cajero</option>
+                        <option value="4">Escritor</option>
+                        <option value="5">Super escritor</option>
+                        <option value="6">Administrador</option>
                     </select>
                 </div>
 
