--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -23,7 +23,7 @@
 }
 
 .cardSpace {
-    background-image: url(http://thepatternlibrary.com/img/b.jpg);
+    background: black url(https://acrofitgymnastics-sarasota.com/wp-content/uploads/alt-BACKGROUND-GYMNAST-COLLAGE.jpg);
 }
 
 #logo {
