--- a/src/app/sale-point/sale-point.component.css
+++ b/src/app/sale-point/sale-point.component.css
@@ -1,10 +1,26 @@
 .btn {
     width: 80%;
+    margin: 0 auto;
+    display: block;
 }
 
 .btnSale {
     background: rgb(12, 180, 12);
     transition: 1s;
+}
+
+input {
+    margin: 0;
+}
+
+.btnSale:hover {
+    background: rgb(42, 255, 42);
+    transform: scale(1.05);
+}
+
+.btnSale:focus {
+    background: rgb(42, 255, 42);
+    transform: scale(1.05);
 }
 
 .type {
@@ -118,4 +134,60 @@ tbody {
     .btnSaleNone {
         width: 75%;
     }
+}
+
+.floatOptions {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    /* overflow: hidden; */
+}
+
+.floatOptions:hover .moreOptions {
+    opacity: 1;
+    transform: translateY(0);
+    margin-bottom: 12px;
+}
+
+.floatOptionPrincipal:focus .moreOptions {
+    opacity: 1;
+    margin: 0;
+    transform: translateY(0);
+}
+
+.floatOptionPrincipal {
+    background: #ff0057;
+    color: white;
+    bottom: 0px;
+    right: 0px;
+}
+
+.moreOptions {
+    /* width: 50px; */
+    display: flex;
+    flex-wrap: wrap;
+    width: 55px;
+    margin-bottom: 10px;
+    transition: .5s;
+    opacity: 0;
+    margin-bottom: -150px;
+    /* transform: translateY(80%); */
+}
+
+.moreOptions button {
+    /* margin-bottom: 5px; */
+    transform: scale(.7);
+    margin-bottom: -10px;
+}
+
+#cancelButton {
+    background: #c62828;
+}
+
+#searchButton {
+    background: #4caf50;
+}
+
+#sellButton {
+    background: #039be5;
 }
