--- a/src/app/inventory/inventory.component.html
+++ b/src/app/inventory/inventory.component.html
@@ -1,9 +1,12 @@
-<h1 class="routeTitle">Inventario {{ countProduct()}}</h1>
+<h1 class="centerText">Inventario {{ countProduct()}}</h1>
 
-<input [(ngModel)]="search" name="search" type="text" id="search" (keyup)="searchWriting()" placeholder="Buscar Producto"><label><mat-icon>search</mat-icon></label>
+<div class="divSearch">
+    <input [(ngModel)]="search" name="search" type="text" id="search" (keyup)="searchWriting()" placeholder="Buscar Producto">
+    <br>
+    <mat-icon *ngIf="search == ''">search</mat-icon>
+    <mat-icon *ngIf="search !== ''" (click)="search = ''">close</mat-icon>
+</div>
 
-
-<!-- <button class="createBtn" (click)="createPro = !createPro">Agregar Producto</button> -->
 <div class="responsive-table">
     <table>
         <thead>
@@ -50,11 +53,32 @@
 
 </div>
 
-<a (click)="createObservable()" [routerLink]="['/inventory/create']" *ngIf="storage.getUserType() > 1">
-    <button mat-fab id="createBtn" (click)="createPro = !createPro">
-        <mat-icon >add_shopping_cart</mat-icon>
-    </button>
-</a>
+<div class="floatOptions">
+
+    <div class="moreOptions">
+
+        <a target="_blank" href="{{ url.url }}excel/inventory{{ storage.getTokenUrl() }}">
+            <button matTooltip="Descargar Inventario" matTooltipPosition="left" mat-fab id="cancelButton">
+                        <mat-icon >archive</mat-icon>
+                    </button>
+        </a>
+
+        <button (click)="createObservable()" [routerLink]="['/inventory/create']" *ngIf="storage.getUserType() >= 6 " matTooltip="Nuevo Producto" matTooltipPosition="left" mat-fab id="sellButton">
+                <mat-icon >create</mat-icon>
+            </button>
+
+        <button *ngIf="storage.getUserType() == 3" matTooltip="Nuevo Producto" matTooltipPosition="left" mat-fab id="sellButton">
+                <mat-icon >create</mat-icon>
+            </button>
+
+    </div>
+
+    <button matTooltip="Opciones de Inventario" matTooltipPosition="left" mat-fab color="pri" class="floatOptionPrincipal">
+                    <mat-icon >settings</mat-icon>
+                </button>
+
+</div>
+
 
 <!-- <app-new-product *ngIf="createPro" (closeEvent)="createPro = false" (createEvent)="newProduct($event)"></app-new-product> -->
 <router-outlet></router-outlet>
