--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -1,125 +1,225 @@
-<div class="cardSpace" [@background]="state.background">
+<mat-progress-bar mode="indeterminate" *ngIf="sendingData" class="barLoader"></mat-progress-bar>
+<div class="background" [@background]></div>
+<div id="createCard" @principal>
 
-    <div class="closeCardBackground" (click)="closePop()">
-        <h5 class="closeIcon">
-            <mat-icon>close</mat-icon>
-        </h5>
-    </div>
+    <a [routerLink]="['../']">
+        <div id="cerrarBtn"> Cerrar <i class="material-icons">close</i></div>
+    </a>
 
-    <div class="cardModule" [@card]="state.card">
-        <h2>{{ user.name }}</h2>
+
+    <div class="form" [ngClass]="{'loadingForm': sendingData == true}">
+        <h1 align="center">Modificar Usuario</h1>
+
         <div class="options">
-            <mat-icon [routerLink]="['/users/edit', user.id]">edit</mat-icon>
+            <mat-icon (click)="modifyUser()">edit</mat-icon>
             <mat-icon>delete</mat-icon>
         </div>
 
-
-        <div class="flexform">
-            <div>
-                <label>Nombre Completo:</label><br>
-                <input [(ngModel)]="user.name" name="name" type="text" disabled>
-            </div>
-
-
-            <div>
-                <label>Correo:</label><br>
-                <input [(ngModel)]="user.email" name="email" type="email" disabled>
-            </div>
-
-            <div>
-                <label>Tipo de usuario:</label><br>
-                <select [(ngModel)]="user.user_type_id" name="user_type_id" disabled>
-                    <option value="1">Alumno</option> 
-                    <option value="2">Empleado</option>
-                    <option value="3">Cajero</option>
-                    <option value="4">Escritor</option>
-                    <option value="5">Super escritor</option>
-                    <option value="6">Administrador</option>
-            </select>
-            </div>
-
-            <div>
-                <label>Genero:</label><br>
-                <select [(ngModel)]="user.gender" name="gender" disabled>
-                    <option value="1">Masculino</option> 
-                    <option value="2">Femenino</option>
-            </select>
-            </div>
-
-            <div>
-                <label>Telefono:</label><br>
-                <input [(ngModel)]="user.phone" name="phone" type="tel" disabled>
-            </div>
+        <div class="container">
+            <form class="flexRow" enctype="multipart/form-data" autocomplete="off" *ngIf="modify">
+                <div class="flexRow l6">
+                    <h2 class="l12">Datos Personales</h2>
+                    <!-- <h5>Error/es:</h5>
+                    
+                    
+                     -->
 
 
-
-            <div>
-                <label>Fecha de nacimiento:</label><br>
-                <input [(ngModel)]="user.birthday" name="birthday" type="date" disabled>
-            </div>
-
-            <div>
-                <label>Lugar de nacimiento:</label><br>
-                <input [(ngModel)]="user.placeBirth" name="placeBirth" type="text" disabled>
-            </div>
-
-            <div>
-                <label>CURP:</label><br>
-                <input [(ngModel)]="user.curp" name="curp" type="text" disabled>
-            </div>
-
-            <div>
-                <label>Seguro Medico:</label><br>
-                <input [(ngModel)]="user.insurance" name="insurance" type="text" disabled>
-            </div>
-
-            <!-- <div>
-                <label>Foto:</label><br>
-                <input #fileInput class="fileInput" id="fileInput" name="fileInput" type="file" accept="image/x-png,image/gif,image/jpeg">
-            </div>             -->
-
-        </div>
-
-        <h2>Direccion</h2>
-        <div class="flexform">
-            <div>
-                <label>Calle:</label><br>
-                <input [(ngModel)]="user.street" name="street" type="text" disabled>
-            </div>
-
-            <div>
-                <label>Numero de casa:</label><br>
-                <input [(ngModel)]="user.houseNumber" name="houseNumber" type="number" disabled><br>
-            </div>
-
-            <div>
-                <label>Colonia:</label><br>
-                <input [(ngModel)]="user.colony" name="colony" type="text" disabled>
-            </div>
-
-            <div>
-                <label>Ciudad:</label><br>
-                <input [(ngModel)]="user.city" name="city" type="text" disabled><br>
-            </div>
+                    <div class="formData l6 m6">
+                        <label>Nombre Completo:</label><br>
+                        <input [(ngModel)]="user.name" name="name" type="text" placeholder="Nombre" (keydown)="user.nameUppercase()" (keypress)="uniqueNameWriting()" [ngClass]="{ 'inputError': user.validations.name > 0, 'inputValidate': user.validations.name < 0 }">
+                        <small class="error" *ngIf="user.validations.name == 1">Se requiere el nombre</small>
+                        <small class="error" *ngIf="user.validations.name == 2">Nombre existente en la base de datos</small>
+                        <small class="validate" *ngIf="user.validations.name == -1">Correcto</small>
+                    </div>
 
 
-            <!-- <div *ngIf="user.userTypeId == 2 || user.userTypeId == 3">
-                                <h2>Salario</h2>
-                                <input [(ngModel)]="salary.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ inputError: validations.salaryAmount == 1}">
-                                <input [(ngModel)]="salary.bonus" name="bonus" type="number" min="0" placeholder="Bono">
-                                <select [(ngModel)]="salary.salaryTypeId" name="salaryTypeId">
+                    <div class="formData l6 m6">
+                        <label>Correo:</label><br>
+                        <input [(ngModel)]="user.email" name="email" type="email" placeholder="Correo" (keyup)="mailWriting()" [ngClass]="{ 'inputError': user.validations.email > 0, 'inputValidate': user.validations.email < 0 }">
+                        <small class="error" *ngIf="user.validations.email == 1">Correo Requerido</small>
+                        <small class="error" *ngIf="user.validations.email == 2">Correo ya asignado</small>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Tipo de usuario:</label><br>
+                        <select [(ngModel)]="user.user_type_id" name="user_type_id" disabled>
+                            <option value="1">Alumno</option> 
+                            <option value="2">Empleado</option>
+                            <option value="3">Cajero</option>
+                            <option value="4">Escritor</option>
+                            <option value="5">Super escritor</option>
+                            <option value="6">Administrador</option>
+                        </select>
+
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Genero:</label><br>
+                        <select [(ngModel)]="user.gender" name="gender" disabled>
+                            <option value="1">Masculino</option> 
+                            <option value="2">Femenino</option>
+                        </select>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Telefono:</label><br>
+                        <input [(ngModel)]="user.phone" name="phone" type="tel" placeholder="Telefono" (keyup)="user.validatePhoneFormat()">
+                    </div>
+
+
+
+                    <div class="formData l6 m6">
+                        <label>Fecha de nacimiento:</label><br>
+                        <input [(ngModel)]="user.birthday" name="birthday" type="date" placeholder="Cumpleanos">
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Lugar de nacimiento:</label><br>
+                        <input [(ngModel)]="user.placeBirth" name="placeBirth" type="text" placeholder="Lugar de nacimiento" (keyup)="user.placeUpper()">
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>CURP:</label><br>
+                        <input [(ngModel)]="user.curp" name="curp" type="text" placeholder="Curp" (keyup)="user.curpUpper()">
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Seguro Medico:</label><br>
+                        <input [(ngModel)]="user.insurance" name="insurance" type="text" placeholder="Seguro social" (keyup)="user.seguroUpper()">
+                    </div>
+
+                    <!-- <div>
+                        <label>Foto:</label><br>
+                        <input #fileInput class="fileInput" id="fileInput" name="fileInput" type="file" accept="image/x-png,image/gif,image/jpeg">
+                    </div> -->
+
+                    <div class="formData l6 m6" *ngIf="user.user_type_id > 2">
+                        <label>Contraseña:</label><br>
+                        <input [(ngModel)]="user.password" name="password" placeholder="Contraseña" type="password" [ngClass]="{ inputError: user.validations.password > 0 }">
+                        <small class="error" *ngIf="user.validations.password == 1">Se requiere el Correo/Telefono</small>
+                    </div>
+
+                </div>
+                <!--FIN DE DATOS GENERALES DE USUARIO -->
+
+
+
+                <div class="flexRow l6 ">
+                    <h2 class="l12">Direccion</h2>
+
+                    <div class="formData l6 m6">
+                        <label>Calle:</label><br>
+                        <input [(ngModel)]="user.street" name="street" type="text" placeholder="Calle" (keyup)="user.streetUpper()">
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Numero de casa:</label><br>
+                        <input [(ngModel)]="user.houseNumber" name="houseNumber" type="number" placeholder="Numero de casa"><br>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Colonia:</label><br>
+                        <input [(ngModel)]="user.colony" name="colony" type="text" placeholder="Colonia" (keyup)="user.colonyUpper()">
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Ciudad:</label><br>
+                        <input [(ngModel)]="user.city" name="city" type="text" placeholder="Ciudad" (keyup)="user.cityUpper()"><br>
+                    </div>
+
+
+                    <div class="flexRow l12" *ngIf="user.user_type_id == 2 || user.user_type_id == 3">
+                        <h2 class="l12">Salario</h2>
+                        <div class="formData l6 m6">
+                            <label> Monto:</label><br>
+                            <input [(ngModel)]="salary.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ 'inputError': user.validations.salaryAmount == 1}">
+                            <small class="error" *ngIf="user.validations.salaryAmount == 1">Requerido</small>
+                        </div>
+
+
+                        <div class="formData l6 m6">
+                            <label>Bono:</label><br>
+                            <input [(ngModel)]="salary.bonus" name="bonus" type="number" min="0" placeholder="Bono">
+                        </div>
+
+                        <div class="formData l6 m6">
+                            <label>Tipo de Salario:</label>
+                            <select [(ngModel)]="salary.salary_type_id" name="salary_type_id">
                                 <option value="1">Hora</option>
                                 <option value="2">Día</option>
                             </select>
+                        </div>
 
-                            </div>
+                    </div>
 
-                            <div *ngIf="user.userTypeId == 1 ">
-                                <h2>Pago Mensual</h2>
-                                <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ inputError: validations.monthlyPaymentAmount > 0 }">
-                            </div> -->
+                    <div class="flexRow l12" *ngIf="user.user_type_id == 1 ">
+                        <h2 class="l12">Pago Mensual</h2>
+                        <div class="formData l6 m6">
+                            <label>Monto:</label><br>
+                            <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" min="0" placehoder="Monto" *ngIf="credential >= 6">
+                            <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" placehoder="Monto" *ngIf="credential == 3" disabled>
+                            <small class="error" *ngIf="user.validations.monthlyPaymentAmount > 0">Requerido</small>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <!-- <button type="submit" class="btn formBtn"> Usuario</button> -->
+
+            </form>
+
+            <div class="horarios" *ngIf="user.user_type_id <= 3">
+                <h2>Horarios</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Dia</th>
+                            <th>Entrada</th>
+                            <th>Salida</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let x of schedules" [ngClass]="{ scheduleInactive: !x.active }">
+                            <!-- <ng-container *ngIf="x.active"> -->
+                            <th>{{ x.dayView }}</th>
+                            <th>{{ x.check_in }}</th>
+                            <th>{{ x.check_out }}</th>
+                            <!-- </ng-container> -->
+                        </tr>
+                    </tbody>
+                </table>
+
+                <button class="btn horarioBtn" (click)="scheduleView = true">Modificar Horario</button>
+
+            </div>
+            <div class="referencias" *ngIf="user.user_type_id <= 3">
+                <h2>Referencias</h2>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Nombre</th>
+                            <th>Parentesco</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let x of references" [ngClass]="{ scheduleInactive: x.active == false }">
+                            <th>{{ x.name }}</th>
+                            <th>{{ x.relationshipView }}</th>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <button class="btn referenceBtn" (click)="referenceView = true">Modificar Referencias</button>
+
+            </div>
 
         </div>
+
+
+
 
 
     </div>
