--- a/src/app/user/show-user/show-user.component.css
+++ b/src/app/user/show-user/show-user.component.css
@@ -9,3 +9,12 @@
     cursor: pointer;
     margin-right: 14px;
 }
+
+input:disabled {
+    background: white;
+    color: black;
+}
+
+.scheduleInactive {
+    display: none;
+}
