--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -2,32 +2,35 @@
 <div class="background" [@background]></div>
 <div id="createCard" @principal>
 
-    <a [routerLink]="['../']">
+    <a [routerLink]="['../../']">
         <div id="cerrarBtn"> Cerrar <i class="material-icons">close</i></div>
     </a>
 
 
-    <div class="form" [ngClass]="{'loadingForm': sendingData == true}">
+    <div class="form">
         <h1 align="center">Modificar Usuario</h1>
 
         <div class="options">
-            <mat-icon (click)="modifyUser()">edit</mat-icon>
-            <mat-icon>delete</mat-icon>
+
+            <mat-icon routerLink="/users/show/{{ user.id }}/status" matTooltip="Editar Status" matTooltipPosition="below">assessment</mat-icon>
+            <mat-icon (click)="modifyUser()" matTooltip="Editar Usuario" matTooltipPosition="below">edit</mat-icon>
+
+
+            <a href="{{ url.url }}pdf/user{{ storage.getTokenUrl() }}&id={{user.id}}" target="_blank">
+                <mat-icon matTooltip="Imprimir Informacion de Usuario" matTooltipPosition="below">local_printshop</mat-icon>
+            </a>
+
+            <mat-icon matTooltip="Eliminar Usuario" matTooltipPosition="below">delete</mat-icon>
         </div>
 
         <div class="container">
-            <form class="flexRow" enctype="multipart/form-data" autocomplete="off" *ngIf="modify">
+            <form class="flexRow" [ngClass]="{'loadingForm': sendingData == true}" (submit)="updateUser()" enctype="multipart/form-data" autocomplete="off" *ngIf="modify">
                 <div class="flexRow l6">
                     <h2 class="l12">Datos Personales</h2>
-                    <!-- <h5>Error/es:</h5>
-                    
-                    
-                     -->
-
 
                     <div class="formData l6 m6">
                         <label>Nombre Completo:</label><br>
-                        <input [(ngModel)]="user.name" name="name" type="text" placeholder="Nombre" (keydown)="user.nameUppercase()" (keypress)="uniqueNameWriting()" [ngClass]="{ 'inputError': user.validations.name > 0, 'inputValidate': user.validations.name < 0 }">
+                        <input [(ngModel)]="user.name" name="name" type="text" placeholder="Nombre" (keyup)="uniqueNameWriting($event)" [ngClass]="{ 'inputError': user.validations.name > 0, 'inputValidate': user.validations.name < 0 }">
                         <small class="error" *ngIf="user.validations.name == 1">Se requiere el nombre</small>
                         <small class="error" *ngIf="user.validations.name == 2">Nombre existente en la base de datos</small>
                         <small class="validate" *ngIf="user.validations.name == -1">Correcto</small>
@@ -36,7 +39,7 @@
 
                     <div class="formData l6 m6">
                         <label>Correo:</label><br>
-                        <input [(ngModel)]="user.email" name="email" type="email" placeholder="Correo" (keyup)="mailWriting()" [ngClass]="{ 'inputError': user.validations.email > 0, 'inputValidate': user.validations.email < 0 }">
+                        <input [(ngModel)]="user.email" name="email" type="email" placeholder="Correo" (keyup)="uniqueMailWriting($event)" [ngClass]="{ 'inputError': user.validations.email > 0, 'inputValidate': user.validations.email < 0 }">
                         <small class="error" *ngIf="user.validations.email == 1">Correo Requerido</small>
                         <small class="error" *ngIf="user.validations.email == 2">Correo ya asignado</small>
                     </div>
@@ -56,7 +59,7 @@
 
                     <div class="formData l6 m6">
                         <label>Genero:</label><br>
-                        <select [(ngModel)]="user.gender" name="gender" disabled>
+                        <select [(ngModel)]="user.gender" name="gender">
                             <option value="1">Masculino</option> 
                             <option value="2">Femenino</option>
                         </select>
@@ -162,6 +165,146 @@
                             <small class="error" *ngIf="user.validations.monthlyPaymentAmount > 0">Requerido</small>
                         </div>
 
+                        <div class="formData l6 m6">
+                            <div class="btn formBtn" (click)="modifyMonthlyPayment()">Modificar Mensualidad</div>
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <button type="submit" class="btn formBtn">Modificar Datos de Usuario</button>
+
+            </form>
+
+
+            <form class="flexRow" enctype="multipart/form-data" autocomplete="off" *ngIf="!modify">
+                <div class="flexRow l6">
+                    <h2 class="l12">Datos Personales</h2>
+
+                    <div class="formData l6 m6">
+                        <label>Nombre Completo:</label><br>
+                        <input [(ngModel)]="showUser.name" name="name" type="text" placeholder="Nombre" disabled>
+                    </div>
+
+
+                    <div class="formData l6 m6">
+                        <label>Correo:</label><br>
+                        <input [(ngModel)]="showUser.email" name="email" type="email" placeholder="Correo" disabled>
+
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Tipo de usuario:</label><br>
+                        <select [(ngModel)]="showUser.user_type_id" name="user_type_id" disabled>
+                            <option value="1">Alumno</option> 
+                            <option value="2">Empleado</option>
+                            <option value="3">Cajero</option>
+                            <option value="4">Escritor</option>
+                            <option value="5">Super escritor</option>
+                            <option value="6">Administrador</option>
+                        </select>
+
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Genero:</label><br>
+                        <select [(ngModel)]="showUser.gender" name="gender" disabled>
+                <option value="1">Masculino</option> 
+                <option value="2">Femenino</option>
+            </select>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Telefono:</label><br>
+                        <input [(ngModel)]="showUser.phone" name="phone" type="tel" placeholder="Telefono" disabled>
+                    </div>
+
+
+
+                    <div class="formData l6 m6">
+                        <label>Fecha de nacimiento:</label><br>
+                        <input [(ngModel)]="showUser.birthday" name="birthday" type="date" placeholder="Cumpleanos" disabled>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Lugar de nacimiento:</label><br>
+                        <input [(ngModel)]="showUser.placeBirth" name="placeBirth" type="text" disabled>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>CURP:</label><br>
+                        <input [(ngModel)]="showUser.curp" name="curp" type="text" placeholder="Curp" disabled>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Seguro Medico:</label><br>
+                        <input [(ngModel)]="showUser.insurance" name="insurance" type="text" placeholder="Seguro social" disabled>
+                    </div>
+
+
+                </div>
+                <!--FIN DE DATOS GENERALES DE USUARIO -->
+
+
+
+                <div class="flexRow l6 ">
+                    <h2 class="l12">Direccion</h2>
+
+                    <div class="formData l6 m6">
+                        <label>Calle:</label><br>
+                        <input [(ngModel)]="showUser.street" name="street" type="text" placeholder="Calle" disabled>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Numero de casa:</label><br>
+                        <input [(ngModel)]="showUser.houseNumber" name="houseNumber" type="number" placeholder="Numero de casa" disabled><br>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Colonia:</label><br>
+                        <input [(ngModel)]="showUser.colony" name="colony" type="text" placeholder="Colonia" disabled>
+                    </div>
+
+                    <div class="formData l6 m6">
+                        <label>Ciudad:</label><br>
+                        <input [(ngModel)]="showUser.city" name="city" type="text" placeholder="Ciudad" disabled><br>
+                    </div>
+
+
+                    <div class="flexRow l12" *ngIf="showUser.user_type_id == 2 || showUser.user_type_id == 3">
+                        <h2 class="l12">Salario</h2>
+                        <div class="formData l6 m6">
+                            <label> Monto:</label><br>
+                            <input [(ngModel)]="salary.amount" name="amount" type="number" min="0" placeholder="Monto" [ngClass]="{ 'inputError': showUser.validations.salaryAmount == 1}" disabled>
+                            <small class="error" *ngIf="showUser.validations.salaryAmount == 1">Requerido</small>
+                        </div>
+
+
+                        <div class="formData l6 m6">
+                            <label>Bono:</label><br>
+                            <input [(ngModel)]="salary.bonus" name="bonus" type="number" min="0" placeholder="Bono" disabled>
+                        </div>
+
+                        <div class="formData l6 m6">
+                            <label>Tipo de Salario:</label>
+                            <select [(ngModel)]="salary.salary_type_id" name="salary_type_id" disbaled>
+                    <option value="1">Hora</option>
+                    <option value="2">Día</option>
+                </select>
+                        </div>
+
+                    </div>
+
+                    <div class="flexRow l12" *ngIf="showUser.user_type_id == 1 ">
+                        <h2 class="l12">Pago Mensual</h2>
+                        <div class="formData l6 m6">
+                            <label>Monto:</label><br>
+
+                            <input [(ngModel)]="monthlyPayment.amount" name="amount" type="number" placehoder="Monto" disabled>
+                            <small class="error" *ngIf="showUser.validations.monthlyPaymentAmount > 0">Requerido</small>
+                        </div>
+
                     </div>
 
                 </div>
@@ -191,7 +334,7 @@
                     </tbody>
                 </table>
 
-                <button class="btn horarioBtn" (click)="scheduleView = true">Modificar Horario</button>
+                <button routerLink="/users/show/{{ user.id }}/schedule" *ngIf="schedules.length > 1" class="btn horarioBtn" (click)="toModifySchedules()">Modificar Horario</button>
 
             </div>
             <div class="referencias" *ngIf="user.user_type_id <= 3">
@@ -212,15 +355,16 @@
                     </tbody>
                 </table>
 
-                <button class="btn referenceBtn" (click)="referenceView = true">Modificar Referencias</button>
+                <button routerLink="/users/show/{{ user.id }}/references" *ngIf="schedules.length !== null" class="btn referenceBtn" (click)="toModifyReferences()">Modificar Referencias</button>
+
+                <br><br><br>
 
             </div>
 
         </div>
 
-
-
-
-
     </div>
+
 </div>
+
+<router-outlet></router-outlet>
