--- a/src/app/receipt/create-reciept/create-reciept.component.html
+++ b/src/app/receipt/create-reciept/create-reciept.component.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="cardModule" [@card]="state.card">
-        <h2>Crear Recibo</h2>
+        <h2 class="centerText">Crear Recibo</h2>
 
         <form *ngIf="request == undefined" (submit)="createReceipt()">
             <div class="flexform">
@@ -20,7 +20,7 @@
 
                 <div>
                     <label>Nombre de Alumno:</label><br>
-                    <input [(ngModel)]="payment.userName" name="userName" type="search" [matAutocomplete]="auto" (keyup)="searchSugest($event)">
+                    <input [(ngModel)]="payment.user_name" name="user_name" type="search" [matAutocomplete]="auto" (keyup)="searchSugest($event)">
 
                     <mat-autocomplete #auto="matAutocomplete">
                         <mat-option *ngFor="let sugest of sugests" [value]="sugest.name" (onSelectionChange)="getMonthlyFrom(sugest.id)">
@@ -72,6 +72,12 @@
 
                 </div>
 
+                <div *ngIf="payment.type <= 3">
+                    <label>Año:</label><br>
+                    <input [(ngModel)]="payment.year" name="year" type="number" min="2000" max="9999">
+
+                </div>
+
                 <div *ngIf="payment.type == 5">
                     <label>Descripción:</label><br>
                     <input [(ngModel)]="payment.description" name="description" type="text">
@@ -92,7 +98,7 @@
 <div *ngIf="request != undefined" id="reciboNew">
     <h1>RECIBO # {{ request.id }}</h1>
     <p>MONTO: $ {{ request.amount }}</p>
-    <p>ALUMNO/A: {{ payment.userName }}</p>
+    <p>ALUMNO/A: {{ payment.user_name }}</p>
     <p *ngIf="request.type == 1">TIPO DE PAGO: MENSUALIDAD</p>
     <p *ngIf="request.type == 2">TIPO DE PAGO: INSCRIPCION</p>
     <p>ATENTIDO POR: {{ storage.getUserName() }}</p>
