--- a/src/app/monthly-prices/monthly-price.component.html
+++ b/src/app/monthly-prices/monthly-price.component.html
@@ -1,5 +1,6 @@
 <mat-progress-bar mode="indeterminate" *ngIf="request" class="barLoader"></mat-progress-bar>
 
+<H2 class="centerText">Precios del Gimnasio</H2>
 <div class="responsive-table">
 
     <table *ngIf="credential >= 6">
