--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -34,6 +34,8 @@
 
         <li [routerLink]="['/users']"><button mat-button>Usuarios</button></li>
 
+        <li [routerLink]="['/schedules']"><button mat-button>Horarios</button></li>
+
         <li [routerLink]="['/receipt']"><button mat-button>Recibos</button></li>
 
         <li [routerLink]="['/events']"><button mat-button>Eventos</button></li>
