--- a/src/app/cutout/cutout.component.html
+++ b/src/app/cutout/cutout.component.html
@@ -1,6 +1,6 @@
 <mat-progress-bar mode="indeterminate" *ngIf="sendingData" class="barLoader"></mat-progress-bar>
 
-<h1 class="routeTitle">RECORTE DE CAJA </h1>
+<h2 class="routeTitle">Recorte de Caja </h2>
 
 <form (submit)="updateMoney()">
     <div class="flexform">
@@ -14,7 +14,7 @@
         </div>
 
 
-        <button class="btn formBtn" type="submit">Actualizar Cantidad</button>
+        <button class="btn formBtn l6 center" type="submit">Actualizar Cantidad</button>
 
     </div>
 </form>
