--- a/src/app/receipt/receipt.component.css
+++ b/src/app/receipt/receipt.component.css
@@ -19,16 +19,51 @@
 
 .linkExcel {
     position: absolute;
-    top: 20px;
+    top: 10px;
     right: 20px;
     display: flex;
 }
 
 .linkExcel p {
     display: block;
+    position: relative;
+    margin-top: -5px;
 }
 
 .linkExcel img {
-    height: 35px;
+    height: 20px;
     margin-left: 20px;
+}
+
+#search {
+    background: white;
+    border: none;
+    border-radius: 2px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
+    height: 44px;
+    outline: none;
+    transition: box-shadow 200ms cubic-bezier(0.4, 0.0, 0.2, 1);
+    width: 200px;
+    padding-left: 42px;
+}
+
+.form {
+    display: block;
+    margin: 0 auto;
+    width: fit-content;
+}
+
+#search:focus {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25), 0 0 0 1px rgba(0, 0, 0, 0.16);
+}
+
+#search:hover {
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.25), 0 0 0 1px rgba(0, 0, 0, 0.16);
+}
+
+#search+label {
+    position: absolute;
+    padding-top: 5px;
+    margin-left: -190px;
+    margin-top: 5px;
 }
