Schedule componente organize and work

--- a/src/app/schedules/schedules.component.html
+++ b/src/app/schedules/schedules.component.html
@@ -1,23 +1,28 @@
-<h2 class="centerText">Horarios</h2>
+<div id="reciboNew">
 
-<div *ngFor="let day of dataOrder" class="flexRow">
 
-    <h4 class="centerText">Día: {{ day.day }}</h4>
+    <h2 class="centerText">Horarios</h2>
 
-    <div *ngFor="let schedule of day.schedules" class="l4">
+    <div *ngFor="let day of dataOrder" class="flexRow">
 
-        <div>
+        <h4 class="centerText">Día: {{ day.day }}</h4>
 
-            <h5 class="centerText">Horario: {{ schedule.check_in }} - {{ schedule.check_in + 1 }}</h5>
+        <div *ngFor="let schedule of day.schedules" class="l4">
 
-            <ul>
-                <li *ngFor="let user of schedule.users">
-                    {{ user.user_name }}
-                </li>
-            </ul>
+            <div>
 
+                <h5 class="centerText">Horario: {{ schedule.check_in }} - {{ schedule.check_in + 1 }}</h5>
+
+                <ul>
+                    <li *ngFor="let user of schedule.users">
+                        {{ user.user_name }}
+                    </li>
+                </ul>
+
+
+            </div>
 
         </div>
-
     </div>
+
 </div>
